--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>bitnob-pay-flow</title>
+    <title>bitstra</title>
     <meta name="description" content="Generated Project" />
     <meta name="author" content="" />
 
-    <meta property="og:title" content="bitnob-pay-flow" />
+    <meta property="og:title" content="bitstra" />
     <meta property="og:description" content="Generated Project" />
     <meta property="og:type" content="website" />
-    <!-- Removed Lovable opengraph image -->
 
     <meta name="twitter:card" content="summary_large_image" />
-    <!-- Removed Lovable twitter site -->
-    <!-- Removed Lovable twitter image -->
+   
   </head>
 
   <body>
